2018-08-27  Wenson Hsieh  <wenson_hsieh@apple.com>

        [Cocoa] Exception (fileType 'dyn.agq8u' is not a valid UTI) raised when dragging an attachment whose file wrapper is a directory
        https://bugs.webkit.org/show_bug.cgi?id=188903
        <rdar://problem/43702993>

        Reviewed by Tim Horton.

        Fixes the bug by supporting NSFileWrappers of type directory, as well as NSFileWrappers with file that do not
        map to concrete type identifiers. Among other things, this patch ensures that:
        -       Inserting a directory file wrapper (or using -setFileWrapper:…: to change an existing _WKAttachment's
                file wrapper to a directory) does not cause the attachment element to show "0 bytes" as the subtitle.
        -       In the above scenario, we also won't end up with a missing "type" attribute for the attachment element,
                as well as a corresponding API::Attachment::contentType() that's an empty string.
        -       Dropping or pasting attachments backed by paths on disk also doesn't trigger these problems, if the path
                is a directory or of unknown file type.

        Changes are verified by 2 new API tests.

        * UIProcess/API/APIAttachment.cpp:
        (API::Attachment::updateAttributes):
        (API::Attachment::fileSizeForDisplay const):
        * UIProcess/API/APIAttachment.h:
        * UIProcess/API/Cocoa/APIAttachmentCocoa.mm:
        (API::Attachment::setFileWrapperAndUpdateContentType):

        Add a helper that sets the file wrapper to the given NSFileWrapper, and either sets the content type to the
        given content type if it's specified, or infers it from the file extension of the new NSFileWrapper. Invoked
        whenever an NSFileWrapper and content type combination is set on an API attachment via WebKit SPI.

        (API::Attachment::fileSizeForDisplay const):
