@@ -1,3 +1,13 @@
+2018-08-27  Alex Christensen  <achristensen@webkit.org>
+
+        REGRESSION(r234985/r234989) WKPageLoadHTMLString with a 16-bit String has the wrong encoding
+        https://bugs.webkit.org/show_bug.cgi?id=189002
+
+        Reviewed by Tim Horton.
+
+        * TestWebKitAPI/Tests/WebKit/WillLoad.cpp:
+        (TestWebKitAPI::TEST_F):
+
 2018-08-27  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         [Cocoa] Exception (fileType 'dyn.agq8u' is not a valid UTI) raised when dragging an attachment whose file wrapper is a directory
